adding routing in the application

--- a/src/app.scss
+++ b/src/app.scss
@@ -61,3 +61,20 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.login{
+ cursor:pointer
+ 
+}
+
+.search-filter{
+    display:flex;
+    flex-direction: row;
+    margin: 10px 420px;
+    cursor: pointer;
+}
+
+.filter{
+    margin-left: 10px;
+    
+}
